# hyprland-bind-activewindow

./: Cargo.toml  LICENCE.md  README.md  sumi.toml
.cargo/: config.toml
src/: buf.rs  bufreader.rs  bufstream.rs  event.rs  instance.rs  libasm.rs  main.rs  unixstream.rs
