[package]
name = "hyprland-bind-activewindow"
version = "0.1.0"
edition = "2024"

[dependencies]

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[lints.clippy]
pedantic = "warn"
nursery = "warn"
similar_names = { level = "allow", priority = 2 }

